# api_demo_v2

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: dockerfile
backend/app/: prestart.sh  pyproject.toml
backend/app/api/: main.py  pre_start.py
backend/app/api/auth/: auth.py  deps.py
backend/app/api/core/: config.py  database.py  message_handler.py  message_listener.py  rasa_adapter.py  twilio_adapter.py
backend/app/api/routes/: subscriptions.py
backend/app/api/schemas/: message.py  subscription.py  token.py  user.py
backend/app/api/tests/: test_auth.py
backend/app/tests_e2e/: test_e2e_auth.py
rasa/: Dockerfile  domain.yml
rasa/app/: credentials.yml  domain.yml  endpoints.yml
rasa/app/data/: nlu.yml  rules.yml  stories.yml
rasa/app/tests/: test_stories.yml
rasa/data/: nlu.yml  rules.yml  stories.yml
scripts/: build.sh  start.sh  stop.sh  test-e2e.sh  test-local.sh
