[tool.poetry]
name = "api_demo_v2"
version = "0.1.0"
description = "API that allows an user to subscribe to updates of a service."
authors = ["Urbano <ugutitej@gmail.com>"]
classifiers = ["License :: OSI Approved :: Apache Software License"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.12.1"
fastapi = "^0.63.0"
pydantic = {extras = ["dotenv"], version ="^1.4"}
emails = "^0.6"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
pytest = "^5.4.3"
python-multipart = "^0.0.5"
twilio = "^6.54.0"
python-jose[cryptography]
passlib[bcrypt]

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^20.8b1"
isort = "^5.4.2"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.3"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
